--- a/notebooks/theory_00.ipynb
+++ b/notebooks/theory_00.ipynb
@@ -721,12 +721,13 @@
     "$$\n",
     "\\mathcal{L}(W, b) = \\sum_{i=1}^{N} \\left( y_i \\cdot \\log(a(z_i)) + (1 - y_i) \\cdot \\log(1 - a(z_i)) \\right)\n",
     "$$\n",
-    "We can see that the loss function is composed of two parts: the first part is $y_i \\cdot \\log(a(z_i))$ and the second part is $(1 - y_i) \\cdot \\log(1 - a(z_i))$.\n",
-    "We can calculate the derivative of the loss function with respect to $a$ as follows:\n",
+    "We can see that the loss function is composed of two parts: the first part is $y_i \\cdot \\log(a(z_i))$ and the second part is $(1 - y_i) \\cdot \\log(1 - a(z_i))$. The derivatives of rhese ineer parts are what we need to calculate.\n",
+    "We can calculate them using the logarithm properties. The derivative of the logarithm function is:\n",
     "$$\n",
     "\\frac{\\partial L}{\\partial a} = \\frac{\\partial L}{\\partial a(z)} = \\frac{y_i}{a(z)} - \\frac{1 - y_i}{1 - a(z)}\n",
     "$$\n",
-    "This is the derivative of the loss function with respect to the activation function. It tells us how the loss function changes when we change the output of the neuron.\n"
+    "\n",
+    "> yeah, the derivative function of the log function is the function $\\frac{1}{x}$"
    ]
   },
   {
