--- a/notebooks/theory_00.ipynb
+++ b/notebooks/theory_00.ipynb
@@ -795,7 +795,7 @@
    "id": "5054f199",
    "metadata": {},
    "source": [
-    "We can now begin the development:\n",
+    "### We can now begin the development of $\\frac{\\partial L}{\\partial w_1}$ :\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
