--- a/notebooks/theory_00.ipynb
+++ b/notebooks/theory_00.ipynb
@@ -815,7 +815,7 @@
     "\n",
     "## $\\frac{\\partial L}{\\partial w_2}$ Computation\n",
     "\n",
-    "Similarly, we can calculate the gradient of the cost function with respect to $w_2$:\n",
+    "Similarly, we can calculate the gradient of the loss function with respect to $w_2$:\n",
     "$$\n",
     "\\left[\\frac{\\partial \\mathcal{L}}{\\partial w_2}=-\\frac{x_2}{m} \\sum_i\\left(y_i-a_{i}\\right)\\right]\n",
     "\n",
@@ -850,7 +850,10 @@
     "\n",
     "We will update the parameters $w$ and $b$ using the following formulas:\n",
     "$$\n",
-    "W = W - \\alpha \\cdot \\frac{\\partial L}{\\partial W}\n",
+    "w_1 = w_1 - \\alpha \\cdot \\frac{\\partial L}{\\partial w_1}\n",
+    "$$\n",
+    "$$\n",
+    "w_2 = w_2 - \\alpha \\cdot \\frac{\\partial L}{\\partial w_2}\n",
     "$$\n",
     "$$\n",
     "b = b - \\alpha \\cdot \\frac{\\partial L}{\\partial b}\n",
