--- a/notebooks/theory_00.ipynb
+++ b/notebooks/theory_00.ipynb
@@ -867,9 +867,11 @@
    "source": [
     "That's it!! Phew, this was really the hardest part to understand.\n",
     "\n",
-    "You don't realize what you've just done, but let me tell you that 90% of the students in my engineering school don't know how to do this.\\\\\n",
+    "You don't realize what you've just done, but let me tell you that 90% of the students in my engineering school don't know how to do this.\n",
     "\n",
-    "Now, all that's left is to code everything into a learning loop. It’s much simpler now, you’ll see.\n"
+    "Now, all that's left is to code everything into a learning loop in order to train this neuron. \n",
+    "\n",
+    "You'll see how the neuron learns by itself using what we just covered.\n"
    ]
   },
   {
