--- a/notebooks/read_this_before_and_everyday.ipynb
+++ b/notebooks/read_this_before_and_everyday.ipynb
@@ -7,10 +7,10 @@
    "source": [
     "## *\"The most difficult thing is the decision to act; the rest is merely tenacity\"* - *Amelia Earhart*\n",
     "\n",
-    "Hello. Today, you stand before this notebook and I see a person who wants things to change. But most importantly, I see a person who is ready to take full responsibility for their actions. That's sometimes rare to find, but who said that pearls are easy to find ?\n",
+    "Hello. Today, you stand before this numerical sheet of paper and I see a person who wants things to change. But most importantly, I see a person who is ready to take full responsibility for their actions. That's sometimes rare to find, but who said that pearls are easy to find ?\n",
     "\n",
-    "Welcome to my notebook, made by a person that has asked himself the same questions you are asking yourself right now: Wtf is Deep learning ? How does that work..? like REALLY\\\n",
-    "This notebook is hard. But this notebook is also a journey. A journey that will take you from the very basics of deep learning to the advanced concepts.\n",
+    "Welcome to my deep learning guide, made by a person that has asked himself the same questions you are asking yourself right now: Wtfunk is Deep learning ? How does that work..? like REALLY\\\n",
+    "This notebook is hard. But this notebook is also a journey. A journey that will take you from the very basics of deep learning to a fully operational multi-layer neural network.\n",
     "\n",
     "But don't worry. No I am not a preacher saying that, I mean it. Why ? Because I am not a teacher, I'm like you. But mostly, don't worry because the most difficult thing is the decision to act. And you just took this decision; the rest is merely tenacity.\n",
     "\n",
@@ -21,7 +21,7 @@
     "- **Practical part**: This part is composed of the practical implementation of the theory. I explain the code in a simple way, with examples and illustrations.\n",
     "\n",
     "That's it.\\\n",
-    "Next step for you is **theory_00.ipynb**. So go for it, you will be amazed by what you will learn."
+    "Next step for you is **theory_00.ipynb**. So go for it, you will be amazed by what you can learn."
    ]
   }
  ],
