--- a/notebooks/roadmap.ipynb
+++ b/notebooks/roadmap.ipynb
@@ -5,12 +5,12 @@
    "metadata": {},
    "source": [
     "This the order of the guide :\n",
-    "1. [theory_00.ipynb](#theory_00.ipynb)\n",
-    "2. [practice_00.ipynb](#practice_00.ipynb)\n",
-    "3. [practice_01.ipynb](#practice_01.ipynb)\n",
-    "4. [theory_02.ipynb](#theory_02.ipynb)\n",
-    "5. [practice_02.ipynb](#practice_02.ipynb)\n",
-    "6. [practice_03.ipynb](#practice_03.ipynb)"
+    "1. [theory_00.ipynb](./theory_00.ipynb)\n",
+    "2. [practice_00.ipynb](./practice_00.ipynb)\n",
+    "3. [practice_01.ipynb](./practice_01.ipynb)\n",
+    "4. [theory_02.ipynb](./theory_02.ipynb)\n",
+    "5. [practice_02.ipynb](./practice_02.ipynb)\n",
+    "6. [practice_03.ipynb](./practice_03.ipynb)\n"
    ]
   }
  ],
