--- a/notebooks/practice_00.ipynb
+++ b/notebooks/practice_00.ipynb
@@ -5,6 +5,8 @@
    "id": "53297c42",
    "metadata": {},
    "source": [
+    "practice_00.ipynb\n",
+    "\n",
     "# Here, we are coding our first artificial neuron."
    ]
   },
