--- a/notebooks/practice_01.ipynb
+++ b/notebooks/practice_01.ipynb
@@ -5,6 +5,8 @@
    "id": "d27b1d3d",
    "metadata": {},
    "source": [
+    "practice_01.ipynb\n",
+    "\n",
     "# Practice : Cat VS Dog"
    ]
   },
