--- a/notebooks/practice_02.ipynb
+++ b/notebooks/practice_02.ipynb
@@ -5,6 +5,8 @@
    "id": "be0a9242",
    "metadata": {},
    "source": [
+    "practice_02.ipynb\n",
+    "\n",
     "# Practice : making a two-layer neural network"
    ]
   },
