--- a/notebooks/practice_03.ipynb
+++ b/notebooks/practice_03.ipynb
@@ -5,7 +5,9 @@
    "id": "ebc01f12",
    "metadata": {},
    "source": [
-    "# Last but not least\n"
+    "practice_03.ipynb\n",
+    "\n",
+    "# Hang in there, my friend — this is the turning point."
    ]
   },
   {
