--- a/notebooks/roadmap.ipynb
+++ b/notebooks/roadmap.ipynb
@@ -4,13 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This the order of the guide :\n",
-    "1. [theory_00.ipynb](./notebooks/theory_00.ipynb)\n",
-    "2. [practice_00.ipynb](./notebooks/practice_00.ipynb)\n",
-    "3. [practice_01.ipynb](./notebooks/practice_01.ipynb)\n",
-    "4. [theory_02.ipynb](./notebooks/theory_02.ipynb)\n",
-    "5. [practice_02.ipynb](./notebooks/practice_02.ipynb)\n",
-    "6. [practice_03.ipynb](./notebooks/practice_03.ipynb)\n",
+    "Details of this guide :\n",
+    "\n",
+    "1. Understanding the neuron : **Page 3**, *theory_00.ipynb*\n",
+    "2. Can it predict a toxic / non-toxic plant : **Page 18**, *practice_00.ipynb*\n",
+    "3. Cat VS Dog : **Page 30**, *practice_01.ipynb*\n",
+    "4. Understanding the neural network : **Page 41** *theory_02.ipynb*\n",
+    "5. Coding a two-layer neural network : **Page 63**, *practice_02.ipynb*\n",
+    "6. Coding The Final Boss : **Page 87**, *practice_03.ipynb*\n",
     "\n"
    ]
   }
