--- a/notebooks/theory_00.ipynb
+++ b/notebooks/theory_00.ipynb
@@ -5,6 +5,8 @@
    "id": "070ae593",
    "metadata": {},
    "source": [
+    "theory_00.ipynb\n",
+    "\n",
     "# What is a Neural Network?\n",
     "\n",
     "A neural network is... a network of neurons. I am not not joking. A neural network is like a team of decision-makers (neurons), each making a tiny choice based on inputs. Combined, they learn complex patterns — like how you recognize faces or letters.\n",
