--- a/notebooks/theory_02.ipynb
+++ b/notebooks/theory_02.ipynb
@@ -5,6 +5,8 @@
    "id": "ae65c922",
    "metadata": {},
    "source": [
+    "theort_02.ipynb\n",
+    "\n",
     "# Theory of Neural Networks"
    ]
   },
@@ -14,7 +16,7 @@
    "metadata": {},
    "source": [
     "Hi there, you just made the decision to understand the theory of neural networks. It is gonna be tough, but you will be amazed and true to yourself.\\\n",
-    "This is the message at the end of this notebook : "
+    "**This is the message at the end of this notebook :**"
    ]
   },
   {
@@ -22,7 +24,7 @@
    "id": "2333362d",
    "metadata": {},
    "source": [
-    "\"\n",
+    "**\"**\n",
     "### I know what you thinking:\n",
     "> \"Those equations are ugly as hell\"\n",
     "\n",
@@ -37,9 +39,9 @@
     "\n",
     "But that's the beauty of it: a few people understand how it works, and the ones who do are the ones who will be able to create their own models and architectures.\n",
     "\n",
-    "\"\n",
+    "**\"**\n",
     "\n",
-    "No more talking, let's get started with the theory of neural networks :"
+    "**No more talking, let's get started with the theory of neural networks :**"
    ]
   },
   {
@@ -47,7 +49,7 @@
    "id": "990a42bd",
    "metadata": {},
    "source": [
-    "What have seen the theory of a neuron through the perceptron model. \n",
+    "We have seen the theory of a neuron through the perceptron model. \n",
     "The perceptron model is a simple model of a neuron that takes multiple inputs, applies weights to them, and produces an output based on a threshold function. \n",
     "We saw that the perceptron can be used to classify data into two categories.\n",
     "\n",
