--- a/notebooks/theory_02.ipynb
+++ b/notebooks/theory_02.ipynb
@@ -5,7 +5,7 @@
    "id": "ae65c922",
    "metadata": {},
    "source": [
-    "theort_02.ipynb\n",
+    "theory_02.ipynb\n",
     "\n",
     "# Theory of Neural Networks"
    ]
