--- a/notebooks/read_this_before_and_everyday.ipynb
+++ b/notebooks/read_this_before_and_everyday.ipynb
@@ -5,6 +5,8 @@
    "id": "bc7960bb",
    "metadata": {},
    "source": [
+    "# WTtFunk is Deep Learning : a guide for self-learners\n",
+    "\n",
     "## *\"The most difficult thing is the decision to act; the rest is merely tenacity\"* - *Amelia Earhart*\n",
     "\n",
     "Hello. Today, you stand before this numerical sheet of paper and I see a person who wants things to change. But most importantly, I see a person who is ready to take full responsibility for their actions. That's sometimes rare to find, but who said that pearls are easy to find ?\n",
@@ -21,8 +23,14 @@
     "- **Practical part**: This part is composed of the practical implementation of the theory. I explain the code in a simple way, with examples and illustrations.\n",
     "\n",
     "That's it.\\\n",
-    "Next step for you is **theory_00.ipynb**. So go for it, you will be amazed by what you can learn."
+    "Next step for you is **theory_00.ipynb, Page 3**. So go for it, you will be amazed by what you can learn."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fdcad6c6",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
