--- a/notebooks/roadmap.ipynb
+++ b/notebooks/roadmap.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Details of this guide :\n",
     "\n",
-    "1. Understanding the neuron : **Page 3**, *theory_00.ipynb*\n",
+    "- **Page 3** : Understanding the neuron, *theory_00.ipynb*\n",
     "\n",
     "In this part, we debunk the myth of the neuron and understand how it works. I explain the concepts in a simple way, with examples and illustrations.\n",
     "\n",
@@ -33,6 +33,11 @@
     "We are coding the big guy. They all say it’s complex. But deep down, it’s just fear talking. If you've followed along this far, you'll be blown away by how simple it really is.\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
