--- a/notebooks/roadmap.ipynb
+++ b/notebooks/roadmap.ipynb
@@ -12,23 +12,23 @@
     "\n",
     "In this part, we debunk the myth of the neuron and understand how it works. I explain the concepts in a simple way, with examples and illustrations.\n",
     "\n",
-    "2. Can it predict a toxic / non-toxic plant : **Page 19**, *practice_00.ipynb*\n",
+    "- **Page 19** : Can it predict a toxic / non-toxic plant, *practice_00.ipynb*\n",
     "\n",
     "We code the same neuron to predict whether a plant is toxic or not. We will also use the neuron to make predictions.\n",
     "\n",
-    "3. Cat VS Dog : **Page 31**, *practice_01.ipynb*\n",
+    "- **Page 31** : Cat VS Dog, *practice_01.ipynb*\n",
     "\n",
     "Here we use the same neuron again (this little man works too much )to classify images of cats and dogs and make predictions as well.\n",
     "\n",
-    "4. Understanding the neural network : **Page 42** *theory_02.ipynb*\n",
+    "- **Page 42** : Understanding the neural network, *theory_02.ipynb*\n",
     "\n",
     "Now we debunk the myth of the neural network and understand how it works. Simple, straight to the point.\n",
     "\n",
-    "5. Coding a two-layer neural network : **Page 66**, *practice_02.ipynb*\n",
+    "- **Page 66** : Coding a two-layer neural network, *practice_02.ipynb*\n",
     "\n",
     "We code a first neural network with two layers ans see how it handles the previous datasets.\n",
     "\n",
-    "6. Coding a multi-layer neural network : **Page 90**, *practice_03.ipynb*\n",
+    "- **Page 90** : Coding a multi-layer neural network, *practice_03.ipynb*\n",
     "\n",
     "We are coding the big guy. They all say it’s complex. But deep down, it’s just fear talking. If you've followed along this far, you'll be blown away by how simple it really is.\n",
     "\n"
