--- a/notebooks/roadmap.ipynb
+++ b/notebooks/roadmap.ipynb
@@ -30,14 +30,9 @@
     "\n",
     "- **Page 90** : Coding a multi-layer neural network, *practice_03.ipynb*\n",
     "\n",
-    "We are coding the big guy. They all say it’s complex. But deep down, it’s just fear talking. If you've followed along this far, you'll be blown away by how simple it really is.\n",
+    "They all say it’s complex. But deep down, it’s just fear talking. If you've followed along this far, you'll be blown away by how simple it really is.\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
