--- a/notebooks/read_this_before_and_everyday.ipynb
+++ b/notebooks/read_this_before_and_everyday.ipynb
@@ -5,7 +5,7 @@
    "id": "bc7960bb",
    "metadata": {},
    "source": [
-    "# WTtFunk is Deep Learning : a guide for self-learners\n",
+    "<h1 align=\"center\">WTFunk is Deep Learning : a guide for self-learners</h1>\n",
     "\n",
     "## *\"The most difficult thing is the decision to act; the rest is merely tenacity\"* - *Amelia Earhart*\n",
     "\n",
