--- a/notebooks/theory_00.ipynb
+++ b/notebooks/theory_00.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "4e5056c4",
    "metadata": {},
    "outputs": [
@@ -96,6 +96,16 @@
     }
    ],
    "source": [
+    "from IPython.display import HTML\n",
+    "\n",
+    "HTML('''\n",
+    "<style>\n",
+    "div.input {\n",
+    "    display: none;\n",
+    "}\n",
+    "</style>\n",
+    "''')\n",
+    "\n",
     "from sklearn.datasets import make_blobs\n",
     "import matplotlib.pyplot as plt\n",
     "X, y = make_blobs(n_samples=100, n_features=2, centers=2, random_state=0)\n",
